[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bubbles/Bubble/Bubble.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Bubble.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.4981

[node name="Bubble" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
